Fix scrolling while mobile nav is visible

--- a/styles/components/_mobile-nav.scss
+++ b/styles/components/_mobile-nav.scss
@@ -43,6 +43,10 @@ $transition-length: 0.25s;
   }
 }
 
+.wrapper.menu-visible {
+  @apply hidden;
+}
+
 // mobile menu
 .mobile-nav {
   transform: translate3d(-100%, 0, 0);
